--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="nav-user-list">
-                            <a href="#" class="nav-user-link bag-btn">
+                            <a href="#" class="nav-user-link bag-btn" id="basket-btn">
                                 <i class="fa-solid fa-basket-shopping fa-2x"></i>
                                 <span class="bag-text">bag</span>
                                 <span class="item-count">0</span>
@@ -71,14 +71,38 @@
                     </nav>
                 </div>
             </div>
-            <div class="hidden-search-box d-none justify-content-center align-items-center">
-                <form action="#">
-                    <input class="hidden-search" type="search" placeholder="Search the store">
-                </form>
+            <div class="hidden-search-relative" style="position: relative">
+                <div class="hidden-search-box d-none justify-content-center align-items-center">
+                    <form action="#">
+                        <input class="hidden-search" type="search" placeholder="Search the store">
+                    </form>
+                </div>
             </div>
+            <div class="hidden-scin-care">
+                
+            </div>
+
         </div>
 
     </header>
+    <main>
+        <div class="container">
+            <div class="hehe" style="position: relative">
+                <div id="myModal" class="my-modal">
+                    <div class="my-modal-content">
+                        <div class="modal-body">
+                            <span class="empty-modal">Your cart is empty</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="csp">
+
+            </div>
+        </div>
+
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
