--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
         <section id="slider">
             <div class="container">
                 <div class="slider-container">
-                    <div class="owl-carousel owl-theme">
+                    <div class="owl-carousel first-slider owl-theme">
                         <div class="slider-box">
                             <div class="violet-box">
                                 <img class="slider-img" src="./assets/img/bliss650.480.jpg" alt="bliss cream">
@@ -183,23 +183,158 @@
                             <h2>New Arrivals</h2>
                             <p>Treat yourself to smooth, hydrated, happy skin.</p>
                         </div>
-                        <div class="card-box">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="card" style="width: 18rem;">
-                                        <div class="card-img-top arrivals-img"></div>
-                                        <div class="card-body">
-                                            <div class="rating">
-                                                <i class="fa-solid fa-heart"></i>
-                                                <i class="fa-solid fa-heart"></i>
-                                                <i class="fa-solid fa-heart"></i>
-                                                <i class="fa-solid fa-heart"></i>
-                                                <i class="fa-solid fa-heart my-heart"></i>
-                                            </div>
-                                            <a href="#" class="card-title">Skin-mergency Ampoules Kit</a>
-                                            <p class="card-text">Instant Relief Treatment Set</p>
-                                            <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $22</a>
+                        <div class="owl-carousel second-slider owl-theme">
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-1"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
                                         </div>
+                                        <a href="#" class="card-title">Skin-mergency Ampoules Kit</a>
+                                        <p class="card-text">Instant Relief Treatment Set</p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $22</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-2"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Texture Takedown Skin Smoothing Body Butter</a>
+                                        <p class="card-text">For Rough, Bumpy Skin</p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $15</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-3"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Mighty Biome Pre/Post Biotics + Barrier Aid™
+                                            Moisturizer</a>
+                                        <p class="card-text">
+                                            Ultra-Hydrating Moisturizer Concentrate
+                                        </p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $25</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-4"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Mighty Biome Pre/Post Biotics + Barrier Aid™
+                                            Toner + Serum</a>
+                                        <p class="card-text">
+
+                                            Skin Balancing Milky Toner + Serum
+
+                                        </p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $20</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-1"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Skin-mergency Ampoules Kit</a>
+                                        <p class="card-text">Instant Relief Treatment Set</p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $22</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-2"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                            <i class="fa-solid fa-heart my-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Texture Takedown Skin Smoothing Body Butter</a>
+                                        <p class="card-text">For Rough, Bumpy Skin</p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $15</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-3"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Mighty Biome Pre/Post Biotics + Barrier Aid™
+                                            Moisturizer</a>
+                                        <p class="card-text">
+                                            Ultra-Hydrating Moisturizer Concentrate
+                                        </p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $25</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-box">
+                                <div class="card">
+                                    <a href="#" class="card-img-top arrivals-img img-4"><span>NEW</span></a>
+                                    <div class="card-body">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                        </div>
+                                        <a href="#" class="card-title">Mighty Biome Pre/Post Biotics + Barrier Aid™
+                                            Toner + Serum</a>
+                                        <p class="card-text">
+
+                                            Skin Balancing Milky Toner + Serum
+
+                                        </p>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $20</a>
                                     </div>
                                 </div>
                             </div>
