two items and cruelty sections finished

--- a/home.html
+++ b/home.html
@@ -343,6 +343,105 @@
                 </div>
             </div>
         </section>
+        <section id="only-bliss">
+            <div class="container">
+                <div class="only-bliss-container">
+                    <div class="only-bliss-box py-4 px-5">
+                        <div class="border-box">
+                            <div class="row">
+                                <div class="col-lg-3 d-flex justify-content-center align-items-center">
+                                    <h3>Only on blissworld.com</h3>
+                                </div>
+                                <div class="col-lg-3 d-flex justify-content-center align-items-center">
+                                    <div class="items-box d-flex">
+                                        <img src="./assets/img/truck73-37.gif" alt="truck">
+                                        <div class="text-box">
+                                            <p>FREE SHIPPING</p>
+                                            <p>(on orders over $40)</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 d-flex justify-content-center align-items-center">
+                                    <div class="items-box d-flex">
+                                        <img src="./assets/img/samples-gif-ani-73x37.gif" alt="samples">
+                                        <div class="text-box">
+                                            <p>FREE SAMPLES</p>
+                                            <p>(Yes, please!)</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 d-flex justify-content-center align-items-center">
+                                    <div class="items-box d-flex">
+                                        <img src="./assets/img/gifts-gif-ani-73x37.gif" alt="gift">
+                                        <div class="text-box">
+                                            <p>SURPRISES</p>
+                                            <p>(You will love. Trust.)</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="two-items">
+            <div class="container">
+                <div class="gradient-box">
+                    <div class="common-container">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="my-item">
+                                    <a href="#"><img src="./assets/img/twintout-fabulips-retina.jpg" alt="fabulips"></a>
+                                    <div class="text-box">
+                                        <h3>NEW! Fabulips™</h3>
+                                        <p>Three new ways to pamper & nourish your pout.</p>
+                                    </div>
+                                    <a href="#" class="btn btn-primary two-items-btn">SHOP</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="my-item">
+                                    <a href="#"><img src="./assets/img/twintout-rest-assured-with-claim.webp"
+                                            alt="rest assured"></a>
+                                    <div class="text-box">
+                                        <h3>NEW! Rest Assured™ </h3>
+                                        <p>Visibly reduces dark circles & depuffs for refreshed eyes.</p>
+                                    </div>
+                                    <a href="#" class="btn btn-primary two-items-btn">SHOP NOW</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="cruelty-free">
+            <div class="container">
+                <div class="back-cruelty">
+                    <div class="row">
+                        <div class="col-lg-6 d-flex align-items-center">
+                            <div class="left-side-cruelty">
+                                <h2>
+                                    Clean, Cruelty-Free,
+                                    <br>
+                                    Dermatologist-Tested
+                                </h2>
+                                <p>We are a clean, cruelty-free, planet-friendly skincare brand that delivers
+                                    transformative, dermatologist-tested products for total skin happiness.</p>
+                                <a href="#" class="btn btn-primary cruelty-btn">LEARN MORE</a>
+                                <a href="#" class="btn btn-primary cruelty-btn">SHOP BLISS</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="right-side-cruelty">
+                                <img src="./assets/img/hp-about-mobile.webp" alt="girl">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
