home page finished

--- a/home.html
+++ b/home.html
@@ -442,7 +442,232 @@
                 </div>
             </div>
         </section>
+        <section id="bright-idea">
+            <div class="container">
+                <div class="idea-back">
+                    <h2>Bright Idea</h2>
+                    <p>Boosts Brightness & Elasticity In 1 Use With Clinical-Grade Vitamin C</p>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-3">
+                            <div class="card">
+                                <img class="card-img-top idea-img"
+                                    src="./assets/img/bright-idea-section-moisturizer-resized.webp"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <a href="#" class="card-title">Bright Idea Moisturizer</a>
+                                    <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting & Brightening
+                                        Moisturizer</p>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $26</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="card">
+                                <img class="card-img-top idea-img" src="./assets/img/bright-idea-section-resized.webp"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <a href="#" class="card-title">Bright Idea Serum</a>
+                                    <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting & Brightening Serum
+                                    </p>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $28</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="card">
+                                <img class="card-img-top idea-img"
+                                    src="./assets/img/bright-idea-section-eye-cream-resized.webp" alt="Card image cap">
+                                <div class="card-body">
+                                    <a href="#" class="card-title">Bright Idea Eye Cream</a>
+                                    <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting Eye Cream</p>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $25</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="card">
+                                <img class="card-img-top idea-img"
+                                    src="./assets/img/bright-idea-section-eye-patches-resized.webp"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <a href="#" class="card-title">Bright Idea Eyes</a>
+                                    <p class="card-text">Holographic Foil Eye Patches</p>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $4</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="card">
+                                <img class="card-img-top idea-img" style="border-radius: 50%;"
+                                    src="./assets/img/331499757-bi-sheet-mask-front-290x290-min.jpg"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <a href="#" class="card-title">Bright Idea Face Mask</a>
+                                    <p class="card-text">Holographic Foil Sheet Mask</p>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $4</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="card">
+                                <img class="card-img-top idea-img"
+                                    src="./assets/img/bright-idea-section-moisturizer-resized.webp"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <a href="#" class="card-title">Bright Idea Moisturizer Travel Mini</a>
+                                    <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting & Brightening
+                                        Moisturizer</p>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $5</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="last-slider">
+            <div class="container">
+                <div class="last-slider-box">
+                    <a href="#">@bliss</a>
+                    <p>Your daily dose of happiness, unfiltered.</p>
+                    <div class="owl-carousel last-slider owl-theme">
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1631148572.056339586743.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1627144000.828653377312.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1632260466.78999769507.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1628530304.435757697560.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1631148572.056339586743.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1627144000.828653377312.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1632260466.78999769507.jpeg" alt="slider image">
+                        </div>
+                        <div class="last-slider-img">
+                            <img src="./assets/img/1628530304.435757697560.jpeg" alt="slider image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="container">
+            <div class="ftr-box">
+                <div class="row" style="width: 100%;margin: 0;">
+                    <div class="left-side-ftr col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-6">
+                                <img src="./assets/img/bcorp.svg" alt="status">
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <h3>COMPANY</h3>
+                                <ul class="list-group">
+                                    <li class="list-group-item"><a href="#">
+                                            Who we are
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#">
+                                            Find Bliss Near You
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item"><a href="#">
+                                            Bliss Spa
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#">
+                                            Shop
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <h3>CUSTOMER CARE</h3>
+                                <ul class="list-group">
+                                    <li class="list-group-item"><a href="#">
+                                            Gift Cards
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#">
+                                            Contact Us
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item"><a href="#">
+                                            Shipping
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#">
+                                            Returns
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item"><a href="#">
+                                        Ordering & Payment
+                                    </a>
+                                </li>
+                                <li class="list-group-item">
+                                    <a href="#">
+                                        SMS Texts and Alerts
+                                    </a>
+                                </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <h3>THE DRY STAFF</h3>
+                                <ul class="list-group">
+                                    <li class="list-group-item"><a href="#">
+                                        Privacy Policy
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#">
+                                            Terms & Conditions 
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item"><a href="#">
+                                        Accessibility Statement
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#">
+                                            Sitemap
+                                        </a>
+                                    </li>
+                                </ul>
+                                <h3>THE FUN STAFF</h3>
+                                <a href="#"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                                <a href="#"><i class="fa-brands fa-youtube fa-2x"></i></a>
+                                <a href="#"><i class="fa-brands fa-tiktok fa-2x"></i></a>
+                                <p>© 2022 BlissWorld Inc. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" style="padding: 0;">
+                        <div class="mail-box">
+                            <h3>Hear the lastest.</h3>
+                            <p>(new products, exclusive offers and other suprises)</p>
+                            <form>
+                                <input type="email" class="mail-text" placeholder="Enter your email...">
+                                <input type="submit" class="btn btn-primary mail-btn">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
