sign in page finished

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                     </a>
                     <ul class="nav-user-section d-flex">
                         <li class="nav-user-list">
-                            <a href="#" class="nav-user-link login-btn">
+                            <a href="./singin.html" class="nav-user-link login-btn">
                                 <i class="fa-solid fa-hand-sparkles fa-2x"></i>
                                 <span class="login-text">log in</span>
                             </a>
