--- a/singin.html
+++ b/singin.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who We Are</title>
+    <title>Sign in</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -22,9 +21,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <body>
-    <div class="background"></div>
     <header>
         <div class="container">
             <div class="info-text d-flex justify-content-center align-items-center">
@@ -127,82 +124,35 @@
                 </div>
             </div>
         </section>
-        <section id="bliss-story">
+        <section id="sign-in-input">
             <div class="container">
-                <div class="story-box">
-                    <h1 class="page-heading">We are a clean, cruelty-free, dermatologist tested skincare brand</h1>
+                <div class="sign-in-back">
                     <div class="row">
-                        <div class="col-lg-6" style="padding: 0">
-                            <img src="./assets/img/56-our-story-page-900x900-min-resize.jpg" alt="story img">
+                        <div class="col-lg-6">
+                           <div class="sign-in-box d-flex flex-column align-items-center justify-content-center">
+                            <h3>oh, Hey.</h3>
+                            <p>Did you know? When you create a blissworld.com account, you get access to cool stuff like:</p>
+                            <div class="new-customer-fact">
+                                <p>- an easy, breezy checkout process</p>
+                                <p>- quick access to orders & tracking</p>
+                            </div>
+                            <a href="#" class="btn btn-primary sign-in-btn">REGISTER</a>
+                           </div>
                         </div>
-                        <div class="col-lg-6 d-flex justify-content-center flex-column">
-                            <h2>We are CLEAN</h2>
-                            <p>All Bliss products are thoughtfully formulated to be safe and free from over 1,300
-                                harmful substances you don't want on your skin or body. We partner with the most
-                                responsible ingredient suppliers and follow the strict European Union standards -- the
-                                highest in the world for skincare safety.</p>
-                            <p><strong>SOME OF THE 1,300+ QUESTIONABLE INGREDIENTS YOU WILL NEVER SEE IN BLISS
-                                    PRODUCTS:</strong> • PARABENS • SLS/SLES • ADDED PHTHALATES • FORMALDEHYDE OR
-                                FORMALDEHYDE DONORS • TRICLOSAN • TRICLOCARBAN • PETROLATUM • TALC • NPE (NONYLPHENOL
-                                ETHOXYLATE) • BHA (BUTYLATED HYDROXYANISOLE) • BHT (BUTYLATED HYDROXYTOLUENE) •
-                                HYDROQUINONE • PLASTIC MICRO-BEADS</p>
-                        </div>
-                        <div class="col-lg-6 d-flex justify-content-center flex-column">
-                            <h2>We are CRUELTY-FREE.</h2>
-                            <p>Our products are 100% cruelty-free and PETA-certified. We never test our products or
-                                ingredients on animals.</p>
-                            <p>In addition, 90% of Bliss products are vegan and we are committed to making our all
-                                facial care products 100% vegan in 2021.</p>
-                        </div>
-                        <div class="col-lg-6" style="padding: 0">
-                            <img src="./assets/img/our-story-2-compressjpeg.jpg" alt="story img">
-                        </div>
-                        <div class="col-lg-6" style="padding: 0">
-                            <img src="./assets/img/our-story-3-compressjpeg.jpg" alt="story img">
-                        </div>
-                        <div class="col-lg-6 d-flex justify-content-center flex-column">
-                            <h2>We are SPA-POWERED.</h2>
-                            <p>Founded in 1996 in New York City’s Soho, Bliss ignited the modern spa revolution and
-                                championed skincare as self-care before it was a trend.</p>
-                            <p>Now, more than two decades later, we leverage that unique spa experience -- plus the
-                                newest ingredients and skincare innovation -- to make products that are affordable, yet
-                                crazy-effective.</p>
+                        <div class="col-lg-6">
+                           <div class="sign-in-box d-flex flex-column align-items-center justify-content-center">
+                            <h3>Honey, You're Home</h3>
+                            <p>Welcome back! Sign into your account here:</p>
+                            <form style="text-align: center">
+                                <input type="email" class="mail-text" placeholder="Email Address:">
+                                <input type="password" class="mail-text" placeholder="Password:">
+                                <input type="submit" class="btn btn-primary sign-in-btn" value="SIGN IN">
+                            </form>
+                            <a href="#" style="margin-top: 20px" class="read-reviews">Forgot password?</a>
+                           </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section id="product-heroes">
-            <div class="container">
-                <div class="heroes-white-back">
-                    <div class="heroes-box">
-                        <h2>Skincare Superheroes</h2>
-                        <p>Spa-powered innovation to keep you glowing</p>
-                        <div class="row">
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/img1.webp" alt="Card image cap">
-                                <h3>Bright Idea Serum</h3>
-                                <p>Vitamin C + Tri-Peptide Collagen Protecting & Brightening Serum</p>
-                            </div>
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/59-our-story-500x500-resize.webp" alt="Card image cap">
-                                <h3>Makeup Melt™</h3>
-                                <p>Dry/wet Gentle Jelly Cleanser With Rose Flower</p>
-                            </div>
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/img2.webp" alt="Card image cap">
-                                <h3>Block Star™</h3>
-                                <p>Invisible Daily Sunscreen</p>
-                            </div>
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/57-our-story-page-500x500-resize.webp" alt="Card image cap">
-                                <h3>Mighty Marshmallow™</h3>
-                                <p>Bright & Radiant Whipped Mask</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </section>
     </main>
@@ -325,5 +275,4 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/js/pages/script.js"></script>
 </body>
-
 </html>
