basket page finished and start working with localstorage

--- a/home.html
+++ b/home.html
@@ -185,7 +185,7 @@
                         </div>
                         <div class="owl-carousel second-slider owl-theme">
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="1">
                                     <a href="./productdetail.html" class="card-img-top arrivals-img img-1"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -202,7 +202,7 @@
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="2">
                                     <a href="#" class="card-img-top arrivals-img img-2"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -220,7 +220,7 @@
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="3">
                                     <a href="#" class="card-img-top arrivals-img img-3"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="4">
                                     <a href="#" class="card-img-top arrivals-img img-4"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -449,7 +449,7 @@
                     <p>Boosts Brightness & Elasticity In 1 Use With Clinical-Grade Vitamin C</p>
                     <div class="row justify-content-center">
                         <div class="col-lg-3">
-                            <div class="card">
+                            <div class="card" data-id="5">
                                 <img class="card-img-top idea-img"
                                     src="./assets/img/bright-idea-section-moisturizer-resized.webp"
                                     alt="Card image cap">
@@ -457,59 +457,59 @@
                                     <a href="#" class="card-title">Bright Idea Moisturizer</a>
                                     <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting & Brightening
                                         Moisturizer</p>
-                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $26</a>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG <span class="idea-price">$26</span></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <div class="card">
+                            <div class="card" data-id="6">
                                 <img class="card-img-top idea-img" src="./assets/img/bright-idea-section-resized.webp"
                                     alt="Card image cap">
                                 <div class="card-body">
                                     <a href="#" class="card-title">Bright Idea Serum</a>
                                     <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting & Brightening Serum
                                     </p>
-                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $28</a>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG <span class="idea-price">$28</span></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <div class="card">
+                            <div class="card" data-id="7">
                                 <img class="card-img-top idea-img"
                                     src="./assets/img/bright-idea-section-eye-cream-resized.webp" alt="Card image cap">
                                 <div class="card-body">
                                     <a href="#" class="card-title">Bright Idea Eye Cream</a>
                                     <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting Eye Cream</p>
-                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $25</a>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG <span class="idea-price">$25</span></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <div class="card">
+                            <div class="card" data-id="8">
                                 <img class="card-img-top idea-img"
                                     src="./assets/img/bright-idea-section-eye-patches-resized.webp"
                                     alt="Card image cap">
                                 <div class="card-body">
                                     <a href="#" class="card-title">Bright Idea Eyes</a>
                                     <p class="card-text">Holographic Foil Eye Patches</p>
-                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $4</a>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG <span class="idea-price">$4</span></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <div class="card">
+                            <div class="card" data-id="9">
                                 <img class="card-img-top idea-img" style="border-radius: 50%;"
                                     src="./assets/img/331499757-bi-sheet-mask-front-290x290-min.jpg"
                                     alt="Card image cap">
                                 <div class="card-body">
                                     <a href="#" class="card-title">Bright Idea Face Mask</a>
                                     <p class="card-text">Holographic Foil Sheet Mask</p>
-                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $4</a>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG <span class="idea-price">$4</span></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <div class="card">
+                            <div class="card" data-id="10">
                                 <img class="card-img-top idea-img"
                                     src="./assets/img/bright-idea-section-moisturizer-resized.webp"
                                     alt="Card image cap">
@@ -517,7 +517,7 @@
                                     <a href="#" class="card-title">Bright Idea Moisturizer Travel Mini</a>
                                     <p class="card-text">Vitamin C + Tri-Peptide Collagen Protecting & Brightening
                                         Moisturizer</p>
-                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG $5</a>
+                                    <a href="#" class="btn idea-btn btn-primary">ADD TO BAG <span class="idea-price">$5</span></a>
                                 </div>
                             </div>
                         </div>
@@ -677,7 +677,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./assets/js/pages/script.js"></script>
+    <script type="module" src="./assets/js/pages/script.js"></script>
 </body>
 
 </html>
