--- a/productdetail.html
+++ b/productdetail.html
@@ -178,7 +178,7 @@
                                     hero ingredients that penetrate the skin’s surface layers and bring immediate relief
                                     to a variety of skin concerns.</p>
                                 <p>Count:</p>
-                                <div class="item-count">
+                                <div class="info-item-count">
                                     <i class="fa-solid fa-minus"></i>
                                     <input type="text" disabled value="1">
                                     <i class="fa-solid fa-plus"></i>
