--- a/basket.html
+++ b/basket.html
@@ -136,53 +136,13 @@
                     </h1>
                     <div class="row d-flex justify-content-center my-4">
                         <div class="col-md-8">
-                            <div class="card mb-4">
+                            <div class="card basket-items-card mb-4">
                                 <div class="card-header py-3">
                                     <h5 class="mb-0">Cart - 2 items</h5>
                                 </div>
                                 <div class="card-body">
                                     <!-- Single item -->
-                                    <div class="row">
-                                        <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
-                                            <!-- Image -->
-                                            <div class="bg-image hover-overlay hover-zoom ripple rounded"
-                                                data-mdb-ripple-color="light">
-                                                <img src="./assets/img/Skin_Mergency_Treatment_Set_Carton_Front__58833.jpg"
-                                                    class="w-100" alt="Blue Jeans Jacket" />
-                                                <a href="#!">
-                                                    <div class="mask"
-                                                        style="background-color: rgba(251, 251, 251, 0.2)">
-                                                    </div>
-                                                </a>
-                                            </div>
-                                            <!-- Image -->
-                                        </div>
-
-                                        <div class="col-lg-5 d-flex justify-content-center flex-column col-md-6 mb-4 mb-lg-0">
-                                            <!-- Data -->
-                                            <p><strong>Skin-mergency Ampoules Kit</strong></p>
-                                            <p>Instant Relief Treatment Set</p>
-                                            <!-- Data -->
-                                        </div>
-
-                                        <div class="col-lg-4 d-flex justify-content-center flex-column col-md-6 mb-4 mb-lg-0">
-                                            <!-- Quantity -->
-
-                                            <div class="item-count basket-count">
-                                                <i class="fa-solid fa-minus"></i>
-                                                <input type="text" disabled value="1">
-                                                <i class="fa-solid fa-plus"></i>
-                                            </div>
-
-                                            <!-- Quantity -->
-
-                                            <!-- Price -->
-                                            <p class="mt-3 text-start">
-                                                <strong class="price">$22</strong>
-                                            </p>
-                                            <!-- Price -->
-                                        </div>
-                                    </div>
+                                    
 
 
 
@@ -211,11 +171,6 @@
                                 <div class="card-body">
                                     <ul class="list-group list-group-flush">
                                         <li
-                                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                            Products
-                                            <span>$53.98</span>
-                                        </li>
-                                        <li
                                             class="list-group-item d-flex justify-content-between align-items-center px-0">
                                             Shipping
                                             <span>Gratis</span>
@@ -228,7 +183,7 @@
                                                     <p class="mb-0">(including VAT)</p>
                                                 </strong>
                                             </div>
-                                            <span><strong>$53.98</strong></span>
+                                            <span>$<strong class="summary-price">0</strong></span>
                                         </li>
                                     </ul>
 
@@ -360,7 +315,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./assets/js/pages/script.js"></script>
+        <script type="module" src="./assets/js/pages/script.js"></script>
+    <script type="module" src="./assets/js/pages/basket.js"></script>
 </body>
 
 </html>
