--- a/basket.html
+++ b/basket.html
@@ -87,7 +87,7 @@
                                         <a class="nav-link" href="#">BEST SELLERS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">SCIN CARE</a>
+                                        <a class="nav-link" href="./categories.html">SCIN CARE</a>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">BODY & HAIR CARE</a>
                                     </li>
@@ -122,6 +122,7 @@
                         <div class="my-modal-content">
                             <div class="modal-body">
                                 <span class="empty-modal">Your cart is empty</span>
+                                <a  class="view-full d-none" href="./basket.html">View full shopping bag >></a>
                             </div>
                         </div>
                     </div>
