--- a/productdetail.html
+++ b/productdetail.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
         integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+        integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -87,7 +90,7 @@
                                         <a class="nav-link" href="#">BEST SELLERS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">SCIN CARE</a>
+                                        <a class="nav-link" href="./categories.html">SCIN CARE</a>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">BODY & HAIR CARE</a>
                                     </li>
@@ -121,6 +124,7 @@
                         <div class="my-modal-content">
                             <div class="modal-body">
                                 <span class="empty-modal">Your cart is empty</span>
+                                <a  class="view-full d-none" href="./basket.html">View full shopping bag >></a>
                             </div>
                         </div>
                     </div>
@@ -250,7 +254,7 @@
                         </div>
                         <div class="owl-carousel second-slider owl-theme">
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="1">
                                     <a href="#" class="card-img-top arrivals-img img-1"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -262,12 +266,12 @@
                                         </div>
                                         <a href="#" class="card-title">Skin-mergency Ampoules Kit</a>
                                         <p class="card-text">Instant Relief Treatment Set</p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $22</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span>22</span></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="2">
                                     <a href="#" class="card-img-top arrivals-img img-2"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -279,13 +283,13 @@
                                         </div>
                                         <a href="#" class="card-title">Texture Takedown Skin Smoothing Body Butter</a>
                                         <p class="card-text">For Rough, Bumpy Skin</p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $15</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span>15</span></a>
 
                                     </div>
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="3">
                                     <a href="#" class="card-img-top arrivals-img img-3"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -300,12 +304,12 @@
                                         <p class="card-text">
                                             Ultra-Hydrating Moisturizer Concentrate
                                         </p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $25</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span>25</span></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
+                                <div class="card" data-id="4">
                                     <a href="#" class="card-img-top arrivals-img img-4"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
@@ -322,7 +326,7 @@
                                             Skin Balancing Milky Toner + Serum
 
                                         </p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $20</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span>20</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -526,6 +530,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/pages/productdetail.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
+    integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="./assets/js/pages/script.js"></script>
 </body>
 
