--- a/search.html
+++ b/search.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who We Are</title>
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -20,9 +19,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
         integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <body>
     <div class="background"></div>
     <header>
@@ -87,7 +86,7 @@
                                         <a class="nav-link" href="#">BEST SELLERS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./categories.html">SCIN CARE</a>
+                                        <a class="nav-link" href="#">SCIN CARE</a>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">BODY & HAIR CARE</a>
                                     </li>
@@ -121,89 +120,23 @@
                         <div class="my-modal-content">
                             <div class="modal-body">
                                 <span class="empty-modal">Your cart is empty</span>
-                                <a  class="view-full d-none" href="./basket.html">View full shopping bag >></a>
+                                <a class="view-full d-none" href="./basket.html">View full shopping bag >></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <section id="bliss-story">
-            <div class="container">
-                <div class="story-box">
-                    <h1 class="page-heading">We are a clean, cruelty-free, dermatologist tested skincare brand</h1>
-                    <div class="row">
-                        <div class="col-lg-6" style="padding: 0">
-                            <img src="./assets/img/56-our-story-page-900x900-min-resize.jpg" alt="story img">
-                        </div>
-                        <div class="col-lg-6 d-flex justify-content-center flex-column">
-                            <h2>We are CLEAN</h2>
-                            <p>All Bliss products are thoughtfully formulated to be safe and free from over 1,300
-                                harmful substances you don't want on your skin or body. We partner with the most
-                                responsible ingredient suppliers and follow the strict European Union standards -- the
-                                highest in the world for skincare safety.</p>
-                            <p><strong>SOME OF THE 1,300+ QUESTIONABLE INGREDIENTS YOU WILL NEVER SEE IN BLISS
-                                    PRODUCTS:</strong> • PARABENS • SLS/SLES • ADDED PHTHALATES • FORMALDEHYDE OR
-                                FORMALDEHYDE DONORS • TRICLOSAN • TRICLOCARBAN • PETROLATUM • TALC • NPE (NONYLPHENOL
-                                ETHOXYLATE) • BHA (BUTYLATED HYDROXYANISOLE) • BHT (BUTYLATED HYDROXYTOLUENE) •
-                                HYDROQUINONE • PLASTIC MICRO-BEADS</p>
-                        </div>
-                        <div class="col-lg-6 d-flex justify-content-center flex-column">
-                            <h2>We are CRUELTY-FREE.</h2>
-                            <p>Our products are 100% cruelty-free and PETA-certified. We never test our products or
-                                ingredients on animals.</p>
-                            <p>In addition, 90% of Bliss products are vegan and we are committed to making our all
-                                facial care products 100% vegan in 2021.</p>
-                        </div>
-                        <div class="col-lg-6" style="padding: 0">
-                            <img src="./assets/img/our-story-2-compressjpeg.jpg" alt="story img">
-                        </div>
-                        <div class="col-lg-6" style="padding: 0">
-                            <img src="./assets/img/our-story-3-compressjpeg.jpg" alt="story img">
-                        </div>
-                        <div class="col-lg-6 d-flex justify-content-center flex-column">
-                            <h2>We are SPA-POWERED.</h2>
-                            <p>Founded in 1996 in New York City’s Soho, Bliss ignited the modern spa revolution and
-                                championed skincare as self-care before it was a trend.</p>
-                            <p>Now, more than two decades later, we leverage that unique spa experience -- plus the
-                                newest ingredients and skincare innovation -- to make products that are affordable, yet
-                                crazy-effective.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
-        <section id="product-heroes">
+        <section id="bestsellers-title">
             <div class="container">
-                <div class="heroes-white-back">
-                    <div class="heroes-box">
-                        <h2>Skincare Superheroes</h2>
-                        <p>Spa-powered innovation to keep you glowing</p>
-                        <div class="row">
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/img1.webp" alt="Card image cap">
-                                <h3>Bright Idea Serum</h3>
-                                <p>Vitamin C + Tri-Peptide Collagen Protecting & Brightening Serum</p>
-                            </div>
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/59-our-story-500x500-resize.webp" alt="Card image cap">
-                                <h3>Makeup Melt™</h3>
-                                <p>Dry/wet Gentle Jelly Cleanser With Rose Flower</p>
-                            </div>
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/img2.webp" alt="Card image cap">
-                                <h3>Block Star™</h3>
-                                <p>Invisible Daily Sunscreen</p>
-                            </div>
-                            <div class="col-lg-3 heroes-col col-md-6">
-                                <img src="./assets/img/57-our-story-page-500x500-resize.webp" alt="Card image cap">
-                                <h3>Mighty Marshmallow™</h3>
-                                <p>Bright & Radiant Whipped Mask</p>
-                            </div>
-                        </div>
+                <div class="bestsellers-box">
+                    <div class="title-box">
+                        <h1>Bestsellers</h1>
+                        <p>Not sure where to start? Shop our best selling skincare products that top must-have lists of skincare junkies everywhere. Ready? Let’s dew this.</p>
                     </div>
+                    
                 </div>
-
             </div>
         </section>
     </main>
@@ -316,15 +249,17 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="module" src="./assets/js/pages/script.js"></script>
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
+    integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="module" src="./assets/js/pages/script.js"></script>
 </body>
-
 </html>
