categories page finished

--- a/home.html
+++ b/home.html
@@ -273,8 +273,9 @@
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
-                                    <a href="#" class="card-img-top arrivals-img img-1"><span>NEW</span></a>
+                                <div class="card" data-id="1">
+                                    <a href="./productdetail.html"
+                                        class="card-img-top arrivals-img img-1"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
                                             <i class="fa-solid fa-heart"></i>
@@ -283,15 +284,16 @@
                                             <i class="fa-solid fa-heart"></i>
                                             <i class="fa-solid fa-heart my-heart"></i>
                                         </div>
-                                        <a href="#" class="card-title">Skin-mergency Ampoules Kit</a>
+                                        <a href="./productdetail.html" class="card-title">Skin-mergency Ampoules Kit</a>
                                         <p class="card-text">Instant Relief Treatment Set</p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $22</a>
+                                        <a href="./productdetail.html" class="btn arrival-btn btn-primary">ADD TO BAG
+                                            $<span class="idea-price">22</span></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
-                                    <a href="#" class="card-img-top arrivals-img img-2"><span>NEW</span></a>
+                                <div class="card" data-id="2">
+                                    <a href="./productdetail.html" class="card-img-top arrivals-img img-2"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
                                             <i class="fa-solid fa-heart my-heart"></i>
@@ -302,14 +304,15 @@
                                         </div>
                                         <a href="#" class="card-title">Texture Takedown Skin Smoothing Body Butter</a>
                                         <p class="card-text">For Rough, Bumpy Skin</p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $15</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span
+                                                class="idea-price">15</span></a>
 
                                     </div>
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
-                                    <a href="#" class="card-img-top arrivals-img img-3"><span>NEW</span></a>
+                                <div class="card" data-id="3">
+                                    <a href="./productdetail.html" class="card-img-top arrivals-img img-3"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
                                             <i class="fa-solid fa-heart"></i>
@@ -323,13 +326,14 @@
                                         <p class="card-text">
                                             Ultra-Hydrating Moisturizer Concentrate
                                         </p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $25</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span
+                                                class="idea-price">25</span></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-box">
-                                <div class="card">
-                                    <a href="#" class="card-img-top arrivals-img img-4"><span>NEW</span></a>
+                                <div class="card" data-id="4">
+                                    <a href="./productdetail.html" class="card-img-top arrivals-img img-4"><span>NEW</span></a>
                                     <div class="card-body">
                                         <div class="rating">
                                             <i class="fa-solid fa-heart"></i>
@@ -341,11 +345,10 @@
                                         <a href="#" class="card-title">Mighty Biome Pre/Post Biotics + Barrier Aid™
                                             Toner + Serum</a>
                                         <p class="card-text">
-
                                             Skin Balancing Milky Toner + Serum
-
                                         </p>
-                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $20</a>
+                                        <a href="#" class="btn arrival-btn btn-primary">ADD TO BAG $<span
+                                                class="idea-price">20</span></a>
                                     </div>
                                 </div>
                             </div>
